@@ -36,7 +36,6 @@ double gridEdgeRatioError(Grid *g, int n0, int n1 );
 double gridAverageEdgeLength(Grid *g, int node );
 Grid *gridLargestRatioEdge(Grid *g, int node, int *edgeNode, double *ratio );
 Grid *gridSmallestRatioEdge(Grid *g, int node, int *edgeNode, double *ratio );
-Grid *gridSetConnValuesWithMetricErrorMagnatude(Grid *g );
 double gridSpacing(Grid *g, int node );
 Grid *gridResetSpacing(Grid *g );
 Grid *gridScaleSpacing(Grid *g, int node, double scale );
